Upgrade to Scala 2.11.0